Fixed image scaling on small screens

--- a/style.scss
+++ b/style.scss
@@ -235,6 +235,15 @@ html {
                                             }
                                         }
                                     }
+                                    @media screen and (max-width: 600px) {
+                                        .project-img {
+                                            &:hover {
+                                                transform: scale(1.5);
+                                                bottom: 0;
+                                                
+                                            }
+                                        }
+                                    }
                                     @media screen and (max-width: 400px) {
                                         .project-img {
                                             &:hover {
